--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
     "java.project.sourcePaths": [
-        "src",
-        "conversorVersion2"
+        "src"
     ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
